Fix main menu items alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -466,7 +466,6 @@ ul.primary-tabs.links {
       }
       &.dropdown.open>a {
         background-color: #f8f8f8;
-        width: 90%;
         text-align: center;
       }
 
